--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.17.3",
     "method-override": "^3.0.0",
     "mongoose": "^6.0.5"
   }
